...
                  mainAxisAlignment: MainAxisAlignment.center,
                  crossAxisAlignment: CrossAxisAlignment.center,
                  children: [
                    Padding(
                      padding: const EdgeInsets.all(20),
                      child: InternationalPhoneNumberInput(
                        key: const Key("otp_field"),
                        onInputChanged: (PhoneNumber number) {
                          phoneNumber=number.phoneNumber;
                          },
                        hintText: 'Phone Number',
                        selectorConfig: SelectorConfig(
                          selectorType: PhoneInputSelectorType.BOTTOM_SHEET,
...
                    ),

                    const SizedBox(
                      height: 10,
                    ),
                    GestureDetector(
                      key:const Key("otp"),
                      child: Container(
                        width: .5.sw,
                        height: .13.sw,
                        decoration: BoxDecoration(
                            color: Color(0xff3E3B3A),
                            borderRadius: BorderRadius.circular(15),
...
