...
              prefs.setBool('logged', false);
              prefs.setBool('admin', false);
              if(auth.currentUser!.providerData.first.providerId=='google.com'){
                await googleSignIn.signOut();
              }
              await auth.signOut();
            analytics.logEvent(name: 'signout',parameters:null);

            Navigator.pushReplacement(
                  context,
                  MaterialPageRoute(
                      builder: (context) => AuthenticationPage()));
            },
...
